--- a/package.json
+++ b/package.json
@@ -1,28 +1,21 @@
 {
-    "name": "basic-mern-app",
-    "version": "1.0.0",
-    "description": "A Basic MERN Stack App just for practice",
-    "engines": {
-        "node": "8.12.0"
-    },
-    "main": "app.js",
-    "scripts": {
-        "start": "node app.js",
-        "heroku-postbuild": "cd client && yarn install && yarn build",
-        "client": "cd client && yarn start",
-        "server": "nodemon app.js"
-    },
-    "author": "Hemakshi Sachdev",
-    "license": "ISC",
-    "dependencies": {
-        "bcryptjs": "^2.4.3",
-        "body-parser": "^1.18.2",
-        "dotenv": "^6.1.0",
-        "express": "^4.16.3",
-        "jsonwebtoken": "^9.0.0",
-        "mongoose": "^5.7.5"
-    },
-    "devDependencies": {
-        "nodemon": "^1.17.3"
-    }
+  "name": "backend",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^1.7.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-rate-limit": "^7.3.0",
+    "mongoose": "^8.4.1",
+    "node-cache": "^5.1.2"
+  }
 }
